# MS

./: .cocos-project.json  .gitattributes  .gitignore  .gitmodules  .sdkbox_packages.json  CMakeLists.txt  README.md  SetFirebaseSDK.cmake  build_win.config  gen_window_project.bat  gen_window_project_debug.bat  gen_window_project_release.bat
Classes/: AppDelegate.cpp  AppDelegate.h  CheatMenu.cpp  CheatMenu.h  MJBookPage.cpp  MJBookPage.h  MJDefinitions.h  MMQRScan.cpp  MMQRScan.h  MMQRScan.mm  MSGradeManager.cpp  MSGradeManager.h  Monkey_Stories-Bridging-Header.h
Classes/AISpeakingGame/: AISpeakingTopic.cpp  AISpeakingTopic.h  MSExploreViewAISpeaking.cpp  MSExploreViewAISpeaking.h  MSLessonAISpeakingManager.cpp  MSLessonAISpeakingManager.h  MSTabAISpeaking.cpp  MSTabAISpeaking.h
Classes/AppsFlyer/: AppsFlyerProxyX.h  AppsFlyerX+AppController.h  AppsFlyerX+AppController.m  AppsFlyerX.cpp  AppsFlyerX.h  AppsFlyerXAndroid.cpp
Classes/Licensekey/: LicenseInfoModel.cpp  LicenseInfoModel.h  MJAPILicense.cpp  MJAPILicense.h  MJAPIRemoveLicense.cpp  MJAPIRemoveLicense.h  MJAPISendMail.cpp  MJAPISendMail.h  MJAPIVerifyInfoLicense.cpp  MJAPIVerifyInfoLicense.h  MJAPIVerifyViral.cpp  MJAPIVerifyViral.h  MJDeviceInfoAlert.cpp  MJDeviceInfoAlert.h  MJFullLicenseView.cpp  MJFullLicenseView.h  MJLicenseActiveSuccess.cpp  MJLicenseActiveSuccess.h  MJLicenseAlert.cpp  MJLicenseAlert.h  MJLicenseDatabase.cpp  MJLicenseDatabase.h  MJLicensePackage.cpp  MJLicensePackage.h  MJLicenseRemoveSuccess.cpp  MJMailIntro.h  (+18 more)
Design/: TruyenTranh.ccs  TruyenTranh.cfg  new_ui.sketch
Resources/: database.sqlite  games.json  google-services-desktop.json  google-services_mx.json  mjdefault.sqlite  price_info_ver1.json  price_info_ver2.json  price_info_ver3.json  sdkbox_config.json
account_profiles/: APAuth.cpp  APAuth.h  APCalculator.cpp  APCalculator.h  APChooseProfileView.cpp  APChooseProfileView.h  APDatabase.cpp  APDatabase.h  APEmailLogin.cpp  APEmailLogin.h  APEmailOTP.cpp  APEmailOTP.h  APFacebookOAuth-Android.cpp  APFacebookOAuth-Android.h  APFacebookOAuth-desktop.cpp  APFacebookOAuth-desktop.h  APFacebookOAuth-iOS.h  APFacebookOAuth-iOS.mm  APFacebookOAuth.cpp  APFacebookOAuth.h  APGoogleOAuth-Android.cpp  APGoogleOAuth-Android.h  APGoogleOAuth-desktop.cpp  APGoogleOAuth-desktop.h  APGoogleOAuth-iOS.h  APGoogleOAuth-iOS.mm  APGoogleOAuth.cpp  APGoogleOAuth.h  APLoginView.cpp  APLoginView.h  APPhoneAuth-Android.cpp  APPhoneAuth-Android.h  APPhoneAuth-desktop.cpp  APPhoneAuth-desktop.h  APPhoneAuth.cpp  APPhoneAuth.h  APPhoneAuthiOS.h  APPhoneAuthiOS.mm  APPhoneLogin.cpp  APPhoneLogin.h  (+33 more)
account_profiles/SQLiteCpp/SQLiteCpp/: Backup.h  Database.h  Transaction.h  Utils.h
account_profiles/api/: APActiveLicenseAPI.cpp  APActiveLicenseAPI.h  APBaseAPI.cpp  APBaseAPI.h  APDeleteProfileAPI.cpp  APDeleteProfileAPI.h  APLinkUserCrmToAccount.cpp  APLinkUserCrmToAccount.h  APLoadUpdateAPI.cpp  APLoadUpdateAPI.h  APLoginAPI.cpp  APLoginAPI.h  APLogoutAPI.cpp  APLogoutAPI.h  APPasswordAPI.cpp  APPasswordAPI.h  APProfilesListAPI.cpp  APProfilesListAPI.h  APRegisterAPI.cpp  APRegisterAPI.h  APSendEmailMaterialAPI.cpp  APSendEmailMaterialAPI.h  APSendOTPAPI.cpp  APSendOTPAPI.h  APSendOptAPI.cpp  APSendOptAPI.h  APStoreErrorAPI.cpp  APStoreErrorAPI.h  APUpdateEmailAPI.cpp  APUpdateEmailAPI.h  APUpdateEmailMaterialAPI.cpp  APUpdateEmailMaterialAPI.h  APUpdatePasswordAPI.cpp  APUpdatePasswordAPI.h  APUpdatePhoneNumberAPI.cpp  APUpdatePhoneNumberAPI.h  APUpdateProfileAPI.cpp  APUpdateProfileAPI.h  APUpdateUserInfoAPI.cpp  APUpdateUserInfoAPI.h  (+4 more)
account_profiles/new/: APChangePasswordPopup.cpp  APChangePasswordPopup.h  APEnterNewPasswordPopup.cpp  APEnterNewPasswordPopup.h  APEnterNewPasswordPopupForOldUser.cpp  APEnterNewPasswordPopupForOldUser.h  APEnterPhoneNumberPopup.cpp  APEnterPhoneNumberPopup.h  APLoginPopup.cpp  APLoginPopup.h  APMessagePopup.cpp  APMessagePopup.h  APOTPPopup.cpp  APOTPPopup.h  APPasswordRecoveryMethods.cpp  APPasswordRecoveryMethods.h  APPopupBase.cpp  APPopupBase.h  APRegisterPopup.cpp  APRegisterPopup.h  APSecurityQuestionPopup.cpp  APSecurityQuestionPopup.h
account_profiles/new_v2/: APChangePasswordScreen.cpp  APChangePasswordScreen.h  APLoginScreen.cpp  APLoginScreen.h  APPhoneCodePopup.cpp  APPhoneCodePopup.h  APRegisterScreen.cpp  APRegisterScreen.h  APResetPasswordScreen.cpp  APResetPasswordScreen.h  TILLabelAnimated.cpp  TILLabelAnimated.h
account_profiles/new_v3/: APAccountAddPassword.cpp  APAccountAddPassword.h  APAccountConfirmOTP.cpp  APAccountConfirmOTP.h  APAccountConfirmPassword.cpp  APAccountConfirmPassword.h  APAccountDefinesV3.cpp  APAccountDefinesV3.h  APAccountProfileCard.cpp  APAccountProfileCard.h  APAccountProfileDetail.cpp  APAccountProfileDetail.h  APAccountUpdateEmail.cpp  APAccountUpdateEmail.h  APAccountUpdatePassword.cpp  APAccountUpdatePassword.h  APAccountUpdatePhone.cpp  APAccountUpdatePhone.h  APAccountUserInfo.cpp  APAccountUserInfo.h  APEnterEmailPopup.cpp  APEnterEmailPopup.h
account_profiles/new_v4/: APAccountConnectionScreen.cpp  APAccountConnectionScreen.h  APChangeDefaultPasswordScreen.cpp  APChangeDefaultPasswordScreen.h  APConnectWithCurrentAccount.cpp  APConnectWithCurrentAccount.h  APHaveUsedMonkeyApps.cpp  APHaveUsedMonkeyApps.h  APLoginMethodsScreen.cpp  APLoginMethodsScreen.h  APUpdatePhoneNumberScreen.cpp  APUpdatePhoneNumberScreen.h
build-android/: build.gradle  gradle.properties  settings.gradle
mj_applib/: README.md
pro.apply_codes/: CTNotificationServiceExtension.m  FIRDLDefaultRetrievalProcessV2.m
proj.ios_mac/: GoogleService-Info.plist  GoogleService-Info_VI.plist  LaunchScreen.storyboard  MJStory copy-Info.plist  MJStory copy2-Info.plist  MJStory copy3-Info.plist  MJStory copy4-Info.plist  Monkey Stories copy-Info.plist  Monkey_Stories-Bridging-Header.h  Podfile  VN Stories.entitlements  cmake_install.cmake
proj.win32/: Win32DeviceInfo.cpp  Win32DeviceInfo.h  stories_v3.sln
project.keys/: AuthKey_P92L7NTG3R.p8  Edu.keystore  monkey.keystore
project.texturepacker/: pro.texturepack.tps
sub_monkey_maths/: .gitmodules
(+2957 files in other folders)
